ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cemp-ingress
  namespace: cemp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cemp.local
    http:
      paths:
            - path: /
        pathType: Prefix
        backend:
          service:
            name: cemp-api-service
            port:
              number: 80
